--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <title>Olivia Ros</title>
+    <title>Desafio 5</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
@@ -24,6 +24,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script
+      src="https://kit.fontawesome.com/d77671cd77.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="assets/css/estilos.css" />
   </head>
 
@@ -90,41 +94,55 @@
       <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
 
       <p class="my-4">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam
-        distinctio, odit laborum aliquam earum itaque cum sequi, dolorem optio
-        vol
+        Soy Ingeniero en Sistemas con ocho años de experiencia en análisis de
+        datos estadísticos en el ámbito administrativo, apasionado por aprender
+        e incrementar mis conocimientos tecnológicos. Me gusta ser proactivo y
+        aportar en la solución de problemas dentro de la empresa.
       </p>
 
       <div class="row">
         <div class="col-12 col-md-4">
-          <i class="fas fa-camera fa-3x my-3"></i>
-          <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
-          <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
+          <i class="fa-solid fa-computer fa-3x my-3"></i>
+          <h3 class="my-3 fw-bold">Jefe del departamento de aplicaciones</h3>
+          <ul>
+            <li>Análisis y toma de requerimientos.</li>
+            <li>Realizar pruebas de funcionalidad en sistemas de la DGTI</li>
+            <li>
+              Capacitaciones a entes de la secretaria de salud en sistemas de la
+              DGTI.
+            </li>
+          </ul>
         </div>
         <div class="col-12 col-md-4">
-          <i class="fas fa-bullhorn fa-3x my-3"></i>
-          <h3 class="my-3 fw-bold">Crítica culinaria</h3>
-          <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
+          <i class="fa-solid fa-computer fa-3x my-3"></i>
+          <h3 class="my-3 fw-bold">Analista de sistemas y documentador</h3>
+          <ul>
+            <li>Análisis y toma de requerimientos</li>
+            <li>
+              Elaboración de historia de usuarios, escenarios de pruebas y
+              memorias técnicas
+            </li>
+            <li>Realizar pruebas de funcionalidad en sistemas de la DGTI</li>
+          </ul>
         </div>
         <div class="col-12 col-md-4">
-          <i class="far fa-map fa-3x my-3"></i>
-          <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
-          <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
-          </p>
+          <i class="fa-solid fa-car fa-3x my-3"></i>
+          <h3 class="my-3 fw-bold">
+            Jefe del departamento de estadisticas y rutas
+          </h3>
+          <ul>
+            <li>
+              Elaborar e integrar el Informe de Gestión, Reportes Trimestrales y
+              Reporte Mensual de Proyectos
+            </li>
+            <li>
+              Realizar el Ruteo de localidades para traslado de entrega de
+              insumos
+            </li>
+            <li>
+              Integrar y procesar información estadista generada en la dirección
+            </li>
+          </ul>
         </div>
       </div>
     </section>
