Se agregaron imagenes en las cards, información referente a los proyectos realizados y se cambio el titulo de la sección Mis trabajos

--- a/index.html
+++ b/index.html
@@ -148,24 +148,21 @@
     </section>
 
     <section id="Mis-trabajos" class="my-5 p-5 bg-info">
-      <h2 class="display-4 fw-bold text-center text-light mb-3">
-        Mis trabajos
-      </h2>
+      <h2 class="display-4 fw-bold text-center text-light mb-3">Proyectos</h2>
 
       <div class="row">
         <div class="col-12 col-sm-4 py-2">
           <div class="card">
             <div
               class="image-top"
-              style="background-image: url(assets/img/card-1.jpg)"
+              style="background-image: url(assets/img/ccsb.jpg)"
             ></div>
             <div class="card-body">
-              <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+              <h5 class="card-title fw-bold">Sistema Centros Coordinadores</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Explicabo iure sint, perspiciatis distinctio molestias nihil
-                repudiandae neque rem adipisci repellendus libero illo quo
-                blanditiis, velit quasi ad, recusandae voluptates officia.
+                Participacion en el analasis e implementación del módulo para
+                Centros Coordinadores, encargado en la búsqueda de referencias
+                para pacientes con citas programadas.
               </p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
@@ -177,15 +174,14 @@
           <div class="card">
             <div
               class="image-top"
-              style="background-image: url(assets/img/card-2.jpg)"
+              style="background-image: url(assets/img/insumosdif.jpeg)"
             ></div>
             <div class="card-body">
-              <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+              <h5 class="card-title fw-bold">Sistema Insumos DIF Tabasco</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                consequatur quos error fuga excepturi quo. Laudantium optio
-                pariatur laboriosam modi, ea molestias?
+                Documentación y recoleccion de requerimientos para la
+                implementación del sistema de insumos el cual permite tener el
+                control a traves de un padron de usuarios.
               </p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
@@ -197,15 +193,14 @@
           <div class="card">
             <div
               class="image-top"
-              style="background-image: url(assets/img/card-3.jpg)"
+              style="background-image: url(assets/img/validador_cfdi.jpg)"
             ></div>
             <div class="card-body">
-              <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+              <h5 class="card-title fw-bold">Validador CFDI</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                corporis facilis qui architecto dolor, accusamus eveniet
-                exercitationem fugit. Quod autem neque ducimus.
+                Realizacion de pruebas funcionales en la implementación, así
+                como reportes de bugs encontrados en la misma. De igual forma se
+                apoyo con el analisis de requerimientos
               </p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
