--- a/index.html
+++ b/index.html
@@ -223,13 +223,13 @@
 
       <form>
         <div class="form-group mb-4">
-          <label class="mb-2">Nombre</label>
+          <label class="mb-2">Nombre Completo</label>
           <input class="form-control" placeholder="Nombre" />
         </div>
 
         <div class="form-group mb-4">
           <label class="mb-2">Correo electrónico</label>
-          <input class="form-control" placeholder="Correo electrónico" />
+          <input class="form-control" placeholder="ejemplo@mail.com" />
         </div>
 
         <div class="form-group">
@@ -237,6 +237,7 @@
           <textarea
             class="form-control"
             placeholder="Escribe aquí tu mensaje"
+            style="height: 150px"
           ></textarea>
         </div>
 
