Se cambiaron los textos del parrafo en el footer y se le dio estilo de tamaño para el mismo en el CSS

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <a class="nav-link" href="#">Acerca de mi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Trabajos</a>
+              <a class="nav-link" href="#">Proyectos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contacto</a>
@@ -248,7 +248,7 @@
     </section>
 
     <footer class="bg-dark text-center text-light p-4">
-      <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+      <p class="mb-0">Edgar Young 2024. Todos los derechos reservados.</p>
     </footer>
 
     <script
